fix bugs in drag and drop if file is too big

--- a/plugins/file_uploader/widget/css/style.css
+++ b/plugins/file_uploader/widget/css/style.css
@@ -32,7 +32,7 @@
   width: 0; 
   height: 2px;
   margin-left: -2px;
-  background: #6787e3; 
+  background: #8ED2FF; 
   border: none;
 }
 
