--- a/view/css/chris.drag_and_drop.css
+++ b/view/css/chris.drag_and_drop.css
@@ -39,7 +39,7 @@
 #drop-list .loader01 div { 
   width: 0;
   height:1px;
-  background: #353535;
+  background: #8ED2FF;
 /*  margin-right: -1px;*/
 
 }
