--- a/view/css/chris.feed.css
+++ b/view/css/chris.feed.css
@@ -29,7 +29,7 @@
 	border-color: #777;
 	display: none;
 	cursor: pointer;
-	background-color: #DFE9FA;
+	background-color: #8ED2FF;
 	text-align: center;
 	font-weight: bold;
 }
